Completed the example of using mybatis dynamic sql generator

--- a/example/src/main/resources/db.properties
+++ b/example/src/main/resources/db.properties
@@ -4,6 +4,6 @@ db.maxLifetime=1800000
 db.minimumIdle=10
 db.maximumPoolSize=100
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/example?allowMultiQueries=true&useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&createDatabaseIfNotExist=true
+db.url=jdbc:mysql://localhost:3306/example?createDatabaseIfNotExist=true&allowMultiQueries=true&useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&&useSSL=false
 db.user=<your name>
 db.password=<your password>
