--- a/core/pom.xml
+++ b/core/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>maven-model</artifactId>
             <version>3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.11</version>
+        </dependency>
     </dependencies>
 
 </project>
