--- a/example/pom.xml
+++ b/example/pom.xml
@@ -21,9 +21,9 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-parent</artifactId>
+            <artifactId>spring-boot-starter-test</artifactId>
             <version>2.3.8.RELEASE</version>
-            <type>pom</type>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
